# mnemos

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Containerfile  Makefile  PLAN.md  README.md  README.ru.md  bandit-report.json  compose.yaml  config.container.yaml  config.example.yaml  entrypoint.sh  pyproject.toml
.cr/: REPORT.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
contrib/systemd/: ai-brain-server.service  ai-brain-watcher.service  install.sh  mnemos-import-wrapper.sh  mnemos-server.service  mnemos-sync.service  mnemos-sync.timer  mnemos-watcher.service  rsync-wrapper.sh  sync.env.example
deploy/kube/: ai-brain-pod.yaml  mnemos-pod.yaml
deploy/quadlet/: ai-brain.container  mnemos.container
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  getting-started.md  index.md  mcp-tools.md  security.md
docs/adr/: 0001-fork-from-ai-brain.md  0004-context-filter-mandatory-v1.md  0005-cache-center-deferred-to-v2.md  0006-local-onnx-embeddings.md  0007-a2a-sessions-api-v1.md  0009-ssrf-guard-in-ingest-url.md  0013-production-hardening-m15.md  0014-api-auth-threat-model.md
docs/en/: index.md
docs/en/admin/: federation.md  security.md  ssh-sync-hardening.md
docs/en/admin/runbooks/: backup-restore.md  ci-cd.md  (+5 more)
docs/en/architecture/: a2a-sessions.md  overview.md
docs/en/user/: cli-reference.md  context-filter.md  export-import.md  getting-started.md  http-api.md  integration-guide.md  mcp-tools.md  metrics.md  sync.md  tag-contract.md
docs/project/: code-review-2026-06.md  milestones.md
docs/project/adr/: 0001-fork-from-ai-brain.md  0002-gcw-tag-contract-strict-by-default.md  0003-knowledge-pipeline-vector-gating.md  0004-context-filter-mandatory-v1.md  0005-cache-center-deferred-to-v2.md  0006-local-onnx-embeddings.md  0007-a2a-sessions-api-v1.md  0008-sql-injection-via-fstring.md  0009-ssrf-guard-in-ingest-url.md  0010-fallback-isolation-from-gcw.md  0011-mypy-strict-is-real-strict.md  0012-ipv6-ssrf-gap.md  0013-production-hardening-m15.md  0014-api-auth-threat-model.md  0016-federation-threat-model.md  README.md
docs/project/sessions/: SESSION-01-backend-mvp.md
docs/ru/: index.md
docs/ru/admin/: security.md
docs/ru/architecture/: a2a-sessions.md  overview.md
docs/ru/user/: cli-reference.md  context-filter.md  export-import.md  getting-started.md  http-api.md  integration-guide.md  mcp-tools.md  metrics.md  sync.md  tag-contract.md
docs/runbooks/: backup-restore.md
docs/sessions/: SESSION-01-backend-mvp.md
federation/proto/: README.md  buf.gen.yaml  buf.yaml  federation.proto  mnemos_core_api.proto
integrations/: targets.yaml
integrations/hermes/: __init__.py  plugin.yaml
integrations/instructions/: .gitkeep  mnemos-memory-ops.instructions.md  mnemos-session-lifecycle.instructions.md  mnemos-tag-contract.instructions.md
integrations/prompts/: .gitkeep  mnemos-memory.prompt.md
integrations/skills/: .gitkeep  mnemos-checkpoint.md  mnemos-recall.md  mnemos-session-init.md  mnemos-tag-contract.md  mnemos-write.md
scripts/: deploy.sh  gen-proto.sh  install.sh  local-ci.sh  mcp-setup.sh  release.sh  setup-distrobox.sh  sync-peers.sh  sync-readme-version.sh
src/ai_brain/: __init__.py  api.py  cli.py  config.py  embedding.py  ingestion.py  manager.py  mcp_server.py  models.py  watcher.py
src/ai_brain/storage/: sqlite_store.py  vault.py  vector_store.py
src/ai_brain/web/: __init__.py
src/mnemos/: __init__.py  _mesh_gen.py  audit.py  auto_collect.py  cache_aligner.py  ccr.py  compact.py  config.py  federation_a2a.py  federation_access_log.py  federation_client.py  federation_server.py  logging_setup.py  manager.py  mcp_server.py  mesh_client.py  mesh_server.py  models.py  moderation.py  scanner.py  scanner_runtime.py  secrets_detector.py  traces.py  trigger_codes.py
src/mnemos/api/: __init__.py  auth.py  auth_store.py  client_ip.py  federation.py  main.py  middleware.py  rate_limit.py
src/mnemos/cli/: __init__.py  _manager.py  agent_wiring.py  completion.py  doctor.py  export.py  export_cmd.py  import_.py  import_cmd.py  integration.py  logs.py  main.py  migrate.py  scanner_cmd.py  sync.py  sync_cmd.py  util.py
src/mnemos/embeddings/: __init__.py
src/mnemos/filter/: __init__.py  pipeline.py
src/mnemos/llm/: __init__.py  base.py
src/mnemos/pipeline/: __init__.py  cluster.py  publish.py  quality_gate.py  synthesize.py
src/mnemos/policy/: __init__.py  dlq.py  engine.py  scheduler.py  triggers.py
src/mnemos/recall/: __init__.py
src/mnemos/sessions/: __init__.py  api.py  models.py  store.py  summary.py
src/mnemos/storage/: __init__.py  sqlite_store.py  vault.py  vector_store.py
src/mnemos/watchers/: __init__.py  path_scoped.py
tasks/: AUDIT.md  PROGRESS.md  README.md
tasks/code-reviewer/: M19-final-review.md
tasks/senior-dba/: M15.3-sql-injection-refactor.md
tasks/senior-qa-engineer/: M18-e2e-smoke.md
tasks/senior-security-engineer/: M15.2-bandit-cleanup.md
tasks/senior-system-engineer/: M15.1-mypy-strict.md  M15.5-commit-pending.md  M16-a2a-sessions-api.md
tasks/sre-devops/: M17-ci-pipeline.md
tasks/tech-lead/: TL-001-coordination.md
tasks/tech-writer/: M15.4-docs-reconcile.md
tests/: __init__.py  conftest.py  test_a2a_sessions.py  test_agent_recall.py  test_agent_wiring.py  test_agent_wiring_edge.py  test_api.py  test_api_export_import.py  test_auth.py  test_auth_security.py  test_cache_aligner.py  test_ccr.py  test_ccr_background_cleanup.py  test_cli.py  test_compact.py  test_config_layout.py  test_context_filter.py  test_context_filter_edge.py  test_contract_sync.py  test_core.py  test_cors.py  test_critical_fixes.py  test_dashboard_metrics.py  test_doctor_paths.py  test_export_import.py  test_federation_a2a.py  test_federation_access_log.py  test_federation_client.py  test_federation_server.py  test_hermes_integration.py  test_hermes_plugin.py  test_integration.py  test_logging_setup.py  test_logs.py  test_mcp_align_prefix_integration.py  test_mcp_export.py  test_mcp_import.py  test_mcp_server.py  test_mesh_client.py  test_mesh_integration.py  (+26 more)
(+10 files in other folders)
