[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-brain"
version = "0.1.0"
description = "Hybrid long-term memory system: personal knowledge base + RAG for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    # Vector Search (includes onnxruntime for built-in embeddings — no torch needed)
    "chromadb>=0.5",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
    # File watching
    "watchdog>=4.0",
    # Web scraping
    "trafilatura>=1.12",
    "httpx>=0.27",
    # Text processing
    "python-frontmatter>=1.1",
    # Utilities
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
ollama = [
    "ollama>=0.3",
]
sentence-transformers = [
    "sentence-transformers>=3.0",
]
openvino = [
    "optimum[openvino]>=1.19",
]
telegram = [
    "aiogram>=3.10",
]
mcp = [
    "mcp[cli]>=1.0",
]
pdf = [
    "pymupdf>=1.24",
]
docx = [
    "python-docx>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]
all = [
    "ai-brain[ollama,telegram,mcp,pdf,docx,dev]",
]

[project.scripts]
brain = "ai_brain.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_brain"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
