[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemos"
version = "1.1.0"
description = "Standalone memory & knowledge server for GCW agents — forked from ai-brain"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    # Vector Search (includes onnxruntime for built-in embeddings — no torch needed)
    "chromadb>=0.5",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Transitive CVE closure (M15.5.1) — pinned directly to force resolver
    # past vulnerable transitive versions still pulled by chromadb/k8s/fastapi.
    "aiohttp>=3.14.1,<4.0",    # CVE-2026-34993, 47265, 50269, 54273-54280 fixed in 3.14.x
    "starlette>=1.3.0,<2.0",   # CVE-2026-48817, 48818, 54282, 54283 fixed in 1.3.x
    # CLI
    "typer>=0.12",
    "rich>=13.0",
    # File watching
    "watchdog>=4.0",
    # Web scraping
    "trafilatura>=1.12",
    "httpx>=0.27",
    # Text processing
    "python-frontmatter>=1.1",
    # Utilities
    "python-dateutil>=2.9",
    # Scheduling (M5 — policy engine / automation)
    "apscheduler>=3.10",
    # T-AUTH (ADR-0014): bearer tokens + TOTP 2FA + rate limiting
    "pyotp~=2.9",
    "slowapi~=0.1.9",
    "cryptography>=41.0",  # Fernet for TOTP-secret-at-rest; also transitive via httpx[http2]
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.25",
]
openai = [
    "openai>=1.0",
]
gemini = [
    "google-generativeai>=0.5",
]
azure = [
    # Azure OpenAI uses the same openai SDK with azure endpoint config
    "openai>=1.0",
]
ollama = [
    "ollama>=0.3",
]
sentence-transformers = [
    "sentence-transformers>=3.0",
]
openvino = [
    "optimum[openvino]>=1.19",
]
mcp = [
    "mcp[cli]>=1.0",
]
pdf = [
    "pymupdf>=1.24",
]
docx = [
    "python-docx>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0",
    "ruff>=0.15,<0.16",  # CI pins to 0.15.x to match local format
    "mypy>=1.11",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]
all = [
    "mnemos[anthropic,openai,gemini,azure,ollama,mcp,pdf,docx,dev]",
]

[project.scripts]
mnemos = "mnemos.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemos"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]
